@@ -3,6 +3,9 @@ Changelog
 
 5.2-dev - (unreleased)
 ----------------------
+* Feature: added subscriber to update relations once a relation contenttype 
+  has been renamed
+  [ichimdav #9547]
 * Feature: added warning of broken relation when viewing the portal_relations,
   relations and content types pages and continue displaying graph without
   those broken relations
